--- a/style.css
+++ b/style.css
@@ -58,7 +58,8 @@
 .game-score{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    height: 3rem;
+    grid-template-rows: 1fr 1fr;
+    height: 6rem;
     padding-top: 5px;
 }
 
@@ -73,4 +74,33 @@
     background-color: green;
     box-shadow: 2.2px 4.5px 4.5px hsl(0deg 0% 0% / 0.43);
     margin: 2px;
+}
+
+.modal{
+    position: absolute; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%; /* Full width */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: grey;
+    aspect-ratio: 1;
+}
+
+.modal-hidden{
+    display: none; /* Hidden by default */
+}
+
+.modal-visible{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    font-size: 50px;
+}
+
+.modal-button{
+    font-size: 50px;
+    padding: 15px;
 }
